# Scalar-hackthon

./: .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
dataset/: emails.json
email-agent-env/: README.md  backup.py  environment.py  inference.py  openenv.yaml
email-agent-env/tasks/: easy_task.py  hard_task.py  medium_task.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py
